--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -17,3 +17,6 @@ dotnet_diagnostic.SA1200.severity = none
 
 # SA0001: XML comment analysis is disabled due to project configuration
 dotnet_diagnostic.SA0001.severity = none
+
+# SA1402: File may only contain a single type
+dotnet_diagnostic.SA1402.severity = none
