--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,13 +10,15 @@ jobs:
   test:
 
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        dotnet: [ '2.1.500', '3.1.101' ]
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.101
+          dotnet-version: ${{ matrix.dotnet }}
     - name: Install dependencies
       run: dotnet restore src
     - name: Build
