--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,19 +9,30 @@ on:
 jobs:
   test:
 
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        dotnet: [ '2.1.500', '3.1.101' ]
+    runs-on: windows-latest
+    
     steps:
     - uses: actions/checkout@v2
-    - name: Setup .NET Core
+      
+    - name: Setup .net core 2
       uses: actions/setup-dotnet@v1
       with:
-          dotnet-version: ${{ matrix.dotnet }}
+        dotnet-version: 2.1.500
+
+    - name: Setup .net core 3
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 3.1.201
+
+    - name: .net SxS
+      run: |
+        rsync -a ${DOTNET_ROOT/3.0.100/2.2.402}/* $DOTNET_ROOT/
+      
     - name: Install dependencies
       run: dotnet restore src
+      
     - name: Build
       run: dotnet build src --configuration Release --no-restore
+      
     - name: Test
       run: dotnet test src --no-restore --verbosity normal
