--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,7 +24,7 @@ jobs:
       run: dotnet test src --no-restore --verbosity normal
       
     - name: Pack
-      run: dotnet pack src -c Release -o temp --no-restore --no-build
+      run: dotnet pack src -c Release -o tmp --no-restore --no-build
       
     - name: Publish
       run: dotnet nuget push tmp/**/*.nupkg -s https://api.nuget.org/v3/index.json -k ${{ secrets.nuget_api_key }}
