--- a/src/GenericDataStructures/GenericDataStructures.csproj
+++ b/src/GenericDataStructures/GenericDataStructures.csproj
@@ -15,6 +15,10 @@
     <PackageIcon>GenericDataStructures.png</PackageIcon>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard2.1' ">
+    <DefineConstants>NULLABLE_REFERENCE_TYPES_SUPPORTED</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
