--- a/src/GenericDataStructures/GenericDataStructures.csproj
+++ b/src/GenericDataStructures/GenericDataStructures.csproj
@@ -20,6 +20,7 @@
 
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard2.1' ">
     <DefineConstants>NULLABLE_REFERENCE_TYPES_SUPPORTED</DefineConstants>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
