--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -20,3 +20,6 @@ dotnet_diagnostic.SA0001.severity = none
 
 # SA1402: File may only contain a single type
 dotnet_diagnostic.SA1402.severity = none
+
+# SA1602: Enumeration items should be documented
+dotnet_diagnostic.SA1602.severity = none
